--- a/ballerina/azure/ocr/backend/ballerina.conf
+++ b/ballerina/azure/ocr/backend/ballerina.conf
@@ -1,10 +1,8 @@
-ACCESS_KEY = "BLOB_STORAGE_KEY"
-ACCOUNT = "BLOB_STORAGE_ACCOUNT"
-ACCESS_KEY2 = "QUEUE_STORAGE_KEY"
-ACCOUNT2 = "QUEUE_STORAGE_ACCOUNT"
-KEY = "CV_KEY"
-GMAIL_CLIENTID = ""
-GMAIL_CLIENTSECRET = ""
-GMAIL_REFRESHTOKEN = ""
-GMAIL_ACCESSTOKEN = ""
+STORAGE_ACCESS_KEY = "xxxx"
+STORAGE_ACCOUNT = "storage1777"
+CV_KEY = "xxxx"
+GMAIL_CLIENTID = "xxxx"
+GMAIL_CLIENTSECRET = "xxxx"
+GMAIL_REFRESHTOKEN = "xxxx"
+GMAIL_ACCESSTOKEN = "xxxx"
 
